name:                wikinav
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/alessio-b-zak/wikinav#readme
license:             BSD3
license-file:        LICENSE
author:              Alessio Zakaria
maintainer:          alessio.b.zakaria@gmail.com
copyright:           lol
category:            Web
build-type:          Simple
extra-source-files:  README.md 
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, DatabaseFreq
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , split
                     , http-conduit
                     , hakyll
                     , http-media
                     , directory
                     , time
                     , blaze-markup
                     , blaze-html
                     , attoparsec
                     , mtl
                     , containers
                     , base-compat
                     , text
                     , bytestring
                     , string-conversions
                     , lucid
                     , aeson-compat
                     , sqlite-simple
  default-language:    Haskell2010

executable wikinav-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , wikinav
  default-language:    Haskell2010

executable dbuild-exe
  hs-source-dirs:      app
  main-is:             DBuild.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , wikinav
  default-language:    Haskell2010


test-suite wikinav-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wikinav
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alessio-b-zak/wikinav
